# nese

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
app/glad/: glad.c
app/nesesan.opengl/: CMakeLists.txt
app/nesesan.opengl/nesesan.opengl/: main.cpp
app/nesesan.opengl/nesesan.opengl/glad/: glad.h
app/nesesan.sdl2/: CMakeLists.txt
app/nesesan.sdl2/nesesan.sdl2/: main.cpp
lib/: CMakeLists.txt
lib/nese/: CMakeLists.txt  nese.natvis
lib/nese.debug/: CMakeLists.txt
lib/nese.debug/nese.debug/cpu/: snapshot.hpp  snapshotter.cpp  snapshotter.hpp
lib/nese.debugger/: CMakeLists.txt
lib/nese.snapshot/: CMakeLists.txt
lib/nese.snapshot/nese.snapshot/: snapshot.hpp  snapshotter.cpp  snapshotter.hpp
lib/nese/nese/: basic_types.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  cpu.hpp  cpu.inl  cycle.hpp  disassembly.cpp  disassembly.hpp  emulator.cpp  emulator.hpp  nintendulator.cpp  ppu.hpp  ppu.inl
lib/nese/nese/cartridge/: cartridge_mapper_factory.hpp  nrom_cartridge_mapper.cpp
lib/nese/nese/cartridge_mapper/: cartridge_mapper_factory.cpp  cartridge_mapper_factory.hpp  nrom_cartridge_mapper.cpp  nrom_cartridge_mapper.hpp
lib/nese/nese/cpu/: addr_mode.hpp  cpu_opcode.hpp  cpu_opcode_enum.hpp  cpu_registers.hpp  instruction.cpp  instruction.hpp  processor.cpp  processor.hpp  registers.hpp  stack.hpp  state.hpp  state_2.hpp  state_fmt.inl  status_flag.hpp
lib/nese/nese/cpu/instruction/: execute.cpp  execute.hpp  execute_context.hpp  opcode.hpp  opcode_enum.hpp  operand.hpp
lib/nese/nese/graphic/: color.hpp
lib/nese/nese/memory/: mapper.cpp  mapper.hpp  ram.cpp  ram.hpp  rom.hpp
lib/nese/nese/ppu/: control.hpp  state.hpp
lib/nese/nese/utility/: assert.hpp  crc32.hpp  format.cpp  format.hpp  nintendulator.cpp  nintendulator.hpp  passkey.hpp
lib/nesesan/: CMakeLists.txt
lib/nesesan.debugger/: CMakeLists.txt
lib/nesesan.debugger/nesesan.debugger/: cpu_debugger.cpp  cpu_debugger.hpp  cpu_debugger_view.cpp  cpu_debugger_view.hpp  cpu_state_view.cpp  cpu_state_view.hpp  debug_control_view.cpp  debug_control_view.hpp  disassembly_view.cpp  disassembly_view.hpp  extension.cpp  extension.hpp  ram_view.cpp  ram_view.hpp
lib/nesesan/nesesan/: application.cpp  application.hpp  extension.cpp  extension.hpp  imgui.hpp  texture.cpp  texture.hpp  view.cpp  view.hpp
lib/nesesan/nesesan/imgui/: core.hpp  extension.cpp  extension.hpp  format.cpp  format.hpp
lib/nesesan/nesesan/menu/: basic_menu.hpp  basic_submenu_menu_item.cpp  basic_submenu_menu_item.hpp  callback_menu_item.cpp  callback_menu_item.hpp  main_menu.cpp  main_menu.hpp  menu.cpp  menu.hpp  view_menu_item.cpp  view_menu_item.hpp
lib/nesesan/nesesan/view/: game_view.cpp  game_view.hpp  view.cpp  view.hpp  view_draw_context.hpp  view_registry.cpp  view_registry.hpp  window_view.cpp  window_view.hpp
libs/: CMakeLists.txt
libs/nese.debugger/: CMakeLists.txt
libs/nese.debugger/nese.debugger/: cpu_state_view.cpp  disassembly_view.hpp
libs/nese.gui/: CMakeLists.txt
libs/nese.gui/nese.gui/: application.cpp  application.hpp  imgui.hpp  texture.cpp  texture.hpp
libs/nese.gui/nese.gui/menu/: basic_menu.hpp  basic_submenu_menu_item.cpp  basic_submenu_menu_item.hpp  callback_menu_item.hpp  main_menu.cpp  main_menu.hpp  menu.cpp  menu.hpp
libs/nese.gui/nese.gui/view/: game_view.cpp  game_view.hpp  view.cpp  view.hpp  view_registry.hpp  window_view.cpp  window_view.hpp
nese/: CMakeLists.txt
nese/nese/: addr_mode.hpp  basic_types.hpp  cpu.cpp  cpu.hpp  cpu_fmt.inl  cpu_registers.hpp  cpu_status.hpp  emulator.cpp  emulator.hpp  log.hpp  ram.cpp  ram.hpp  rom.cpp  rom.hpp
nese/nese/cpu/: processor.cpp  processor.hpp  processor_fmt.inl
nese/nese/memory/: ram.cpp  rom.cpp
nese/nese/utility/: assert.hpp  log.hpp
nesesan/: CMakeLists.txt
nesesan/nesesan/: main.cpp
tests/: CMakeLists.txt
tests/lib/nese/: CMakeLists.txt
tests/lib/nese.gui/: CMakeLists.txt
tests/lib/nese/nese/: cpu_bus_mock.hpp  cpu_fixture.cpp  cpu_fixture.hpp  cpu_nestest_test.cpp  cpu_test.cpp
tests/lib/nese/nese/cpu/: fixture.hpp  instruction_rom_test.cpp  instruction_test.cpp  processor_test.cpp  state_mock.cpp  state_mock.hpp
tests/lib/nese/nese/cpu/instruction/: adc_test.cpp  and_test.cpp  asl_test.cpp  bcc_test.cpp  bcs_test.cpp  beq_test.cpp  bit_test.cpp  bmi_test.cpp  bne_test.cpp  bpl_test.cpp  branch_fixture.hpp  branch_test.cpp  bvc_test.cpp  bvs_test.cpp  catch_generators.hpp  clc_test.cpp  cld_test.cpp  cli_test.cpp  clv_test.cpp  cmp_test.cpp  cpx_test.cpp  cpy_test.cpp  dcp_test.cpp  dec_test.cpp  dex_test.cpp  dey_test.cpp  eor_test.cpp  execute_context_mock.hpp  fixture.hpp  in.cpp  in_test.cpp  inc_test.cpp  inx_test.cpp  iny_test.cpp  isb_test.cpp  jmp.cpp  jmp_test.cpp  jsr_test.cpp  lax_test.cpp  ld.cpp  (+34 more)
tests/lib/nese/nese/cpu/instruction/fixture/: bitwise_fixture.cpp  bitwise_fixture.hpp  branch_fixture.cpp  branch_fixture.hpp  clear_status_flag_fixture.hpp  compare_fixture.cpp  compare_fixture.hpp  decrement_fixture.cpp  decrement_fixture.hpp  execute_fixture.cpp  execute_fixture.hpp  increment_fixture.cpp  increment_fixture.hpp  load_fixture.cpp  load_fixture.hpp  set_status_flag_fixture.hpp  status_flag_fixture.cpp  status_flag_fixture.hpp  store_fixture.cpp  store_fixture.hpp  transfer_fixture.cpp  transfer_fixture.hpp
tests/lib/nese/nese/utility/: concat.hpp  crc32_test.cpp  hex.hpp  name_of_test.cpp
tests/lib/nesesan/: CMakeLists.txt
tests/lib/nesesan/nesesan/imgui/: format_test.cpp
tests/lib/nesesan/nesesan/menu/: basic_menu_test.cpp
tests/nese/: .gitignore  CMakeLists.txt  test_config.hpp.in
tests/nese/nese/: cpu_fmt_test.cpp  cpu_mock.hpp  cpu_test.cpp
tests/nese/nese/cpu/: processor_mock.hpp  processor_test.cpp
tests/rom/: CMakeLists.txt  test_config.hpp.in
tests/rom/nestest/: nestest_tests.cpp
tests/unit/nese/: CMakeLists.txt
tests/unit/nese/nese/: cpu_fixture.hpp
tests/unit/nese/nese/graphic/: color_test.cpp
tests/unit/nese/nese/utility/: format_test.cpp
(+35 files in other folders)
